# sampo

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
.github/skills/sampo-changeset/: SKILL.md
.github/workflows/: ci.yml  label.yml  publish.yml  release-pr.yml  release.yml
.sampo/: README.md  config.toml  config.toml.example
.sampo/changesets/: ardent-runesinger-loviatar.md  bold-king-louhi.md  bold-knight-lintu.md  bold-stormcaller-louhi.md  bold-wind-sampo.md  cantankerous-witch-otso.md  cantankerous-wolfkin-tuulikki.md  chivalrous-firebringer-vainamoinen.md  chivalrous-forgemaster-erika.md  chivalrous-guardian-lempo.md  chivalrous-queen-tuoni.md  chivalrous-wolfkin-marjatta.md  cranky-duchess-vellamo.md  cranky-lord-erika.md  cunning-king-hiisi.md  cunning-lady-vainamoinen.md  cunning-seer-kullervo.md  dashing-baron-marjatta.md  dashing-duke-aurelien.md  dashing-duke-tuoni.md  dashing-forgemaster-marjatta.md  dashing-lord-nyyrikki.md  dashing-runesmith-vainamoinen.md  distant-harbor-kullervo.md  doughty-baroness-ahti.md  doughty-count-ahti.md  doughty-sage-loviatar.md  doughty-windweaver-marjatta.md  erlang-hex-support-louhi.md  fabled-count-vipunen.md  fabled-princess-sampsa.md  fearless-king-kalma.md  fearless-queen-loviatar.md  fearless-wavetamer-akka.md  forthright-guardian-akka.md  forthright-lord-ahti.md  forthright-shaman-kullervo.md  frozen-harbor-vainamoinen.md  gallant-baron-tapio.md  gallant-stormcaller-otso.md  (+71 more)
crates/sampo/: CHANGELOG.md  Cargo.toml  README.md
crates/sampo-core/: CHANGELOG.md  Cargo.toml  README.md
crates/sampo-core/src/: adapters.rs  changeset.rs  config.rs  discovery.rs  enrichment.rs  errors.rs  filters.rs  git.rs  lib.rs  manifest.rs  markdown.rs  prerelease.rs  process.rs  publish.rs  release.rs  release_tests.rs  tag_template.rs  types.rs  workspace.rs
crates/sampo-core/src/adapters/: cargo.rs  hex.rs  maven.rs  npm.rs  packagist.rs  pypi.rs
crates/sampo-core/src/adapters/cargo/: cargo_tests.rs
crates/sampo-core/src/adapters/hex/: gleam.rs  hex_tests.rs  mix.rs  rebar3.rs
crates/sampo-core/src/adapters/hex/gleam/: gleam_tests.rs
crates/sampo-core/src/adapters/hex/mix/: mix_tests.rs
crates/sampo-core/src/adapters/hex/rebar3/: rebar3_tests.rs
crates/sampo-core/src/adapters/maven/: maven_tests.rs  pom.rs
crates/sampo-core/src/adapters/maven/pom/: pom_tests.rs
crates/sampo-core/src/adapters/npm/: npm_tests.rs
crates/sampo-core/src/adapters/packagist/: packagist_tests.rs
crates/sampo-core/src/adapters/pypi/: pip.rs  pypi_tests.rs
crates/sampo-core/src/adapters/pypi/pip/: pip_tests.rs
crates/sampo-github-action/: CHANGELOG.md  Cargo.toml  README.md  action.yml
crates/sampo-github-action/src/: error.rs  git.rs  github.rs  main.rs  sampo.rs
crates/sampo-github-action/tests/: integration.rs
crates/sampo-github-bot/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.toml
crates/sampo-github-bot/src/: changeset.rs  error.rs  main.rs
crates/sampo/src/: add.rs  changeset.rs  cli.rs  config.rs  enrichment.rs  init.rs  lib.rs  main.rs  names.rs  prerelease.rs  publish.rs  release.rs  release_tests.rs  ui.rs  update.rs  version_check.rs  workspace.rs
scripts/: assemble-npm-binaries.sh  publish-npm-platform-packages.sh
