[dependencies]
glob = "0.3"
rustc-hash = "2.0"
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"

[dependencies.reqwest]
features = ["json", "blocking"]
version = "0.12"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tempfile]
optional = true
version = "3.13"

[dependencies.tokio]
features = ["rt", "macros"]
version = "1.0"

[dev-dependencies]
tempfile = "3.13"

[features]
default = []
testing = ["tempfile"]

[package]
authors = ["Goulven Clech <goulven.clech@protonmail.com>"]
categories = ["development-tools"]
description = "Core types and utilities for Sampo - Internal library, not published"
edition = "2024"
homepage = "https://github.com/bruits/sampo"
keywords = ["changeset", "versioning", "publishing", "semver", "monorepo"]
license = "MIT"
name = "sampo-core"
readme = "README.md"
repository = "https://github.com/bruits/sampo"
version = "0.2.0"
