[package]
name = "sampo-core"
version = "0.7.0"
license = "MIT"
authors = ["Goulven Clech <goulven.clech@protonmail.com>"]
edition = "2024"
description = "Core types and utilities for Sampo."
homepage = "https://github.com/bruits/sampo"
repository = "https://github.com/bruits/sampo"
readme = "README.md"
keywords = ["changeset", "versioning", "publishing", "semver", "monorepo"]
categories = ["development-tools"]

[dependencies]
glob = "0.3"
rustc-hash = "2.0"
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
toml_edit = "0.22"
changesets = "0.4"
semver = "1.0"
tempfile = { version = "3.13", optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "macros"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.8"
cargo_metadata = "0.18"

[dev-dependencies]
tempfile = "3.13"

[features]
default = []
testing = ["tempfile"]
