[package]
name = "sampo-github-action"
version = "0.7.1"
license = "MIT"
authors = ["Goulven Clech <goulven.clech@protonmail.com>"]
edition = "2024"
description = "GitHub Action runner for Sampo CLI (release/publish orchestrator)"
homepage = "https://github.com/bruits/sampo"
repository = "https://github.com/bruits/sampo"
readme = "README.md"
keywords = ["changeset", "versioning", "publishing", "semver", "monorepo"]
categories = ["development-tools"]

[dependencies]
sampo-core = { version = "0.5.0", path = "../sampo-core" }
thiserror = "1.0"
toml = "0.8"
rustc-hash = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
semver = "1.0"

[dev-dependencies]
tempfile = "3.0"
