[dependencies]
base64 = "0.22"
hmac = "0.12"
http = "1"
jsonwebtoken = "9"
octocrab = "0.39"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tracing = "0.1"

[dependencies.axum]
features = ["macros"]
version = "0.7"

[dependencies.reqwest]
features = ["json"]
version = "0.11"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tokio]
features = ["rt-multi-thread", "macros"]
version = "1"

[dependencies.tracing-subscriber]
features = ["fmt", "env-filter"]
version = "0.3"

[package]
authors = ["Goulven Clech <goulven.clech@protonmail.com>"]
categories = ["development-tools"]
description = "GitHub App to inspect PRs and ask for changesets if needed"
edition = "2024"
homepage = "https://github.com/bruits/sampo"
keywords = ["changeset", "versioning", "publishing", "semver", "monorepo"]
license = "MIT"
name = "sampo-github-bot"
readme = "README.md"
repository = "https://github.com/bruits/sampo"
version = "0.2.1"
