[package]
name = "sampo-github-bot"
version = "0.3.1"
license = "MIT"
authors = ["Goulven Clech <goulven.clech@protonmail.com>"]
edition = "2024"
description = "GitHub App to inspect PRs and ask for changesets if needed"
homepage = "https://github.com/bruits/sampo"
repository = "https://github.com/bruits/sampo"
readme = "README.md"
keywords = ["changeset", "versioning", "publishing", "semver", "monorepo"]
categories = ["development-tools"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
octocrab = "0.39"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1"
thiserror = "1"
jsonwebtoken = "9"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"] }
sampo-core = { version = "0.9.0", path = "../sampo-core" }
