[package]
name = "sampo-github-bot"
version = "0.4.8"
license = "MIT"
authors = ["Goulven Clech <goulven.clech@protonmail.com>"]
edition = "2024"
description = "GitHub App to inspect PRs and ask for changesets if needed"
homepage = "https://github.com/bruits/sampo"
repository = "https://github.com/bruits/sampo"
readme = "README.md"
keywords = ["changeset", "versioning", "publishing", "semver", "monorepo"]
categories = ["development-tools"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
octocrab = "0.53"
hmac = "0.13"
sha2 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1"
thiserror = "2"
jsonwebtoken = { version = "10.4", default-features = false, features = ["use_pem", "rust_crypto"] }
base64 = "0.22"
reqwest = { version = "0.13", features = ["json"] }
sampo-core = { version = "0.14.1", path = "../sampo-core" }
