[[bin]]
name = "sampo"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rustc-hash = "2.0"
semver = "1.0.26"
serde_json = "1.0"
toml = "0.8"

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.reqwest]
features = ["json"]
version = "0.12"

[dependencies.sampo-core]
path = "../sampo-core"
version = "0.1.1"

[dev-dependencies]
tempfile = "3"

[package]
authors = ["Goulven Clech <goulven.clech@protonmail.com>"]
categories = ["development-tools"]
description = "Sampo CLI: automate changelogs, versioning, and publishing"
edition = "2024"
homepage = "https://github.com/bruits/sampo"
keywords = ["changeset", "versioning", "publishing", "semver", "monorepo"]
license = "MIT"
name = "sampo"
readme = "README.md"
repository = "https://github.com/bruits/sampo"
version = "0.4.1"
