[package]
name = "sampo"
version = "0.5.0"
license = "MIT"
authors = ["Goulven Clech <goulven.clech@protonmail.com>"]
edition = "2024"
description = "Sampo CLI: automate changelogs, versioning, and publishing"
homepage = "https://github.com/bruits/sampo"
repository = "https://github.com/bruits/sampo"
readme = "README.md"
keywords = ["changeset", "versioning", "publishing", "semver", "monorepo"]
categories = ["development-tools"]

[[bin]]
name = "sampo"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rustc-hash = "2.0"
semver = "1.0.26"
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
sampo-core = { path = "../sampo-core" }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
