[package]
name = "sampo"
version = "0.17.0"
license = "MIT"
authors = ["Goulven Clech <goulven.clech@protonmail.com>"]
edition = "2024"
description = "Sampo CLI: automate changelogs, versioning, and publishing"
homepage = "https://github.com/bruits/sampo"
repository = "https://github.com/bruits/sampo"
readme = "README.md"
keywords = ["changeset", "versioning", "publishing", "semver", "monorepo"]
categories = ["development-tools"]

[[bin]]
name = "sampo"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rustc-hash = "2.0"
semver = "1.0.26"
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sampo-core = { version = "0.13.0", path = "../sampo-core" }
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", default-features = true }
dirs = "6.0.0"
self_update = { version = "0.42", default-features = false, features = [
    "archive-tar",
    "compression-flate2",
    "rustls",
] }

[dev-dependencies]
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
